Fix margin of #jump-to-nav
The top margin is a correction for the bottom margin.
Follow-up to: Id58972b

Bug: T176444
(cherry picked from commit 29b9ee20207b887006f38c85464f6019dae85b69)

--- a/resources/src/mediawiki.skinning/interface.css
+++ b/resources/src/mediawiki.skinning/interface.css
@@ -84,6 +84,7 @@ textarea {
 #contentSub:empty ~ #jump-to-nav,
 #contentSub2:empty ~ #jump-to-nav {
 	margin-top: 0;
+	margin-bottom: 0;
 }
 
 span.subpages {
